# CC-Workshop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/rules/: cross-document-cascade-discipline.md  data-dir-rename-coupling.md  design-language.md  fallback-path-must-be-unreachable-in-test.md  fix-must-define-user-observable-success.md  grep-before-enumerate-shared-resource.md  measure-before-iterative-tuning.md  plan-document-style.md  release-credentials.md  replace-installed-app-in-place.md  validate-curated-upstream-ids.md  validate-no-public-api-claim.md  validate-numerical-equivalence-claims.md  verify-third-party-behavior-firsthand.md
.codex/: config.toml
.codex/rules/: safety.md
.dev/auto-classify-context-overflow/: 01_sample.md  02_sanity_A2.json  03_run_A.json  03_run_B.json  03_run_C.json  03_run_D.json  04_comparison.md  04_metrics.json  05_recommendation.md  06_plan.md  all_stats.json  build_prompt.py  (+5 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
docs/: README.md  development.md  installation.md  usage.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: ai_install_prompt_v3.txt  ai_install_schema.json  ai_install_skill_prompt.txt  ai_install_skill_schema.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: classify.rs  claude_md.rs  config.rs  data.rs  import.rs  marketplace.rs  marketplace_github.rs  marketplace_seed.rs  mcps.rs  mod.rs  plugins.rs  rules.rs  skills.rs  trash.rs
src-tauri/src/utils/: migration.rs  mod.rs  path.rs
(+263 files in other folders)
