[package]
name = "cc-workshop"
version = "2.4.0"
description = "Manage Claude Code Skills, MCP Servers, CLAUDE.md, and Rule files"
authors = ["O0000-code"]
license = "MIT"
repository = "https://github.com/O0000-code/CC-Workshop"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cc_workshop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "gzip"] }
tauri-plugin-single-instance = "2"
urlencoding = "2.1"
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "rt"] }
regex = "1"
flate2 = "1"
tar = "0.4"
# Round 2 R2-1: NFC normalisation of Skill / MCP ids so the same path stored
# as NFD on disk (macOS Finder rename) vs. NFC (git clone, Linux scp,
# iCloud) collapses to a single metadata key. Without this, the same skill
# is identified as two distinct entries in `data.json::skill_metadata` and
# user-set category / tags revert on every scan. See
# `.dev/bug-audit-2026-05-15/round2/G1_plan.md`.
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
